Mirror modifier does not mirror vertex normals when there are no faces. #36301

Closed
opened 2013-07-27 19:35:37 +02:00 by Ryan Twitchell · 3 comments

%%%--- Operating System, Graphics card ---
Gentoo Linux x86_64
Kernel version 3.9.8
NVIDIA GeForce GTX 560

- Blender version with error, and version that worked ---

blender.org build version 2.68a

- Short description of error ---

When there are no faces in a mesh (as when working with the skin modifier) and the mesh has a mirror modifier, vertex normals on the mirrored copies of vertices point in the same direction as their source verticies, rather than being mirrored.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

From a factory default file:

  1. Enter edit mode for the default cube.
  2. Turn on display vertex normals under Mesh Display.
  3. Select all vertices delete them.
  4. Add a mirror modifier.
    5.Turn on "Apply modifier to editing cage..."
  5. Create a single vertex.

The normals for the new vertex and its mirrored copy will be pointing in the same direction, rather than opposite. This will continue to affect other vertices until a face is created. Recalculating normals does not correct this, but applying the modifier will result in correctly mirrored normals.
%%%

%%%--- Operating System, Graphics card --- Gentoo Linux x86_64 Kernel version 3.9.8 NVIDIA GeForce GTX 560 - Blender version with error, and version that worked --- blender.org build version 2.68a - Short description of error --- When there are no faces in a mesh (as when working with the skin modifier) and the mesh has a mirror modifier, vertex normals on the mirrored copies of vertices point in the same direction as their source verticies, rather than being mirrored. - Steps for others to reproduce the error (preferably based on attached .blend file) --- From a factory default file: 1. Enter edit mode for the default cube. 2. Turn on display vertex normals under Mesh Display. 3. Select all vertices delete them. 4. Add a mirror modifier. 5.Turn on "Apply modifier to editing cage..." 6. Create a single vertex. The normals for the new vertex and its mirrored copy will be pointing in the same direction, rather than opposite. This will continue to affect other vertices until a face is created. Recalculating normals does not correct this, but applying the modifier will result in correctly mirrored normals. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r59547.%%%

%%%fixed r59547.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36301
No description provided.