fix [#36301] Mirror modifier does not mirror vertex normals when there are no faces.